--- a/style.css
+++ b/style.css
@@ -7,9 +7,10 @@ body{
     padding: 0;
     margin: 0;
     background-color: #efefef;
-    background-image: url(img/Fondo2.jpg);
+    background-color: cadetblue;
     background-attachment: fixed;
 }
+
 
 header{
    
@@ -30,6 +31,7 @@ header h1{
 .div-ul{
     text-align: center;
     font-size: 1.5rem;
+    margin-bottom: 2rem;
 }
 
 .ul-header{
@@ -79,8 +81,7 @@ main{
 
 .p-jersey{
     font-size: 20px;
-    
-
+    margin-top: 1rem;
 }
 
 .imgjersey{
@@ -121,7 +122,6 @@ main{
 .shato-div{
     display: flex;
     align-items: center;
-    
     margin: 1rem;
     flex-direction: column;
    
@@ -145,12 +145,14 @@ main{
     border-radius: 10px;
 }
 
+/* ESTE ES MI FOOTER */
+
 footer{
     background-color: #364552;
     display: flex;
     justify-content: space-between;
     width: 100%;
-    height: 100%;
+    
 }
 
 .ul-footer{
@@ -191,6 +193,57 @@ ul a{
     color:cornflowerblue;
 
 }
+
+.footer-contacto{
+    
+    bottom: 0;
+}
+
+/* FIN DE MI FOOTER */
+
+
+.productos-1{
+    width: 90%;
+    height: auto;
+    background-color: whitesmoke;
+    margin: 0 auto;
+    margin-bottom: 2rem;
+    padding-bottom: 3rem;
+}
+
+.Container-img{
+    width: 350px;
+    height: 350px;
+    margin: 3rem;
+    padding: 2rem;
+
+}
+
+.Container-img img{
+    width: 100%;
+    height: 90%;
+    object-fit: cover;
+    
+}
+
+.container-1{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+
+}
+
+.container-1 p{
+    padding: 1rem;
+    font-weight: bold;
+
+}
+   
+
+
+
+
 
 .viyela-artic{
     display: flex;
@@ -255,16 +308,15 @@ ul a{
 .shatoosh{
     transition: box-shadow 0.3s ease;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    border: solid black;
-    margin: 1rem;
-    background-color: coral;
-    
+    background-color: whitesmoke;
+    margin-bottom: 2.5rem;
 }
 
 .p-shatoosh{
     font-size: 20px;
-    padding-left: 10px;
+    padding: 1rem;
     text-align: justify;
 }
 
@@ -284,19 +336,19 @@ main article img:hover{
 
 .main-contacto{
     margin-bottom: 1rem;
+    
 }
 
 .form{
-    width: 90%;
-    max-width: 400px;
+    width: 400px;
     border-radius: 1em;
-    padding: 3.5em 1.5em;
+    padding: 3.5em;
     margin: auto;
 }
 
 .form-container{
     width: 100%;
-    display:grid;
+    display: grid;
     gap: 1em;
     grid-auto-columns: 100%;
 }
@@ -349,11 +401,20 @@ table, th, td{
     margin: 0 auto;
     font-size: 1.5rem;
     border-collapse: collapse;
-   
+    
 }
+
+.section-contacto{
+    background-color: cadetblue;
+    height: 453px;
+}
+
+
 
 .tabla-mayorista{
     padding-bottom: 5rem;
+    overflow: scroll;
+    
 }
 
 
@@ -370,6 +431,7 @@ th, td{
 }
 
 .botonaso-1{
+
     text-align: center;
     padding: 2rem;
 }
@@ -378,7 +440,7 @@ th, td{
 
  @media (max-width: 700px ){
     .video-div{
-        width: 40%;
+        text-align: center;
     }
 
 
@@ -387,5 +449,40 @@ th, td{
         height: auto;
     }
 
+    .p-mayorista{
+        font-size: 1.5rem;
+        
+    }
+
+
+    .imgshato{
+        width: 300px;
+        
+    }
+
+    .p-shatoosh{
+       text-align: left;
+       padding: 1rem;
+
+    }
+
+
+    .form{
+        width: 300px;
+        padding: 0;
+        padding-top: 5rem;
+        
+    }
+
+    .section-contacto{
+        margin: 0 auto;
+    }
+
+    .form-container{
+        margin: 0 auto;
+    }
  }
+
+
+
 
